# GroupProjectML

./: README.md  pyproject.toml  requirements.txt
data/: coffee_review.csv
results/: results.csv  test_samples.csv
scripts/: benchmark.ipynb  benchmark.py  clean.py  crawl.py  make_wordcloud.py  test.ipynb
