[tool.poetry]
name = "group_project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
pandas = "^1.5.1"
ipykernel = "^6.17.1"
wordcloud = "^1.8.2"
scikit-learn = "^1.1.3"
nltk = "^3.7"
tensorflow-macos = "^2.10.0"
plotly = "^5.11.0"
nbformat = "^5.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
